added exceptions for VKResults

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(${TARGET_NAME} WIN32
 target_link_libraries(${TARGET_NAME} ${Vulkan_LIBRARY})
 
 set_property(TARGET ${TARGET_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR})
+set_property(TARGET ${TARGET_NAME} PROPERTY CXX_STANDARD 17)
 
 file(GLOB_RECURSE GLSL_SOURCE_FILES
   "Shaders/*.vert"
