--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(${TARGET_NAME} WIN32
   Innovator/Nodes.h
   Innovator/Group.h
   Innovator/Actions.h
+  Innovator/Commands.h
   Innovator/Core/Node.h
   Innovator/Core/File.h
   Innovator/Core/State.h
