started replacing glm with own matrix math

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,8 @@ add_executable(${TARGET_NAME}
   Innovator/Core/State.h
   Innovator/Core/VulkanObjects.h
   Innovator/Core/Misc/Defines.h
+  Innovator/Core/Math/Vector.h
+  Innovator/Core/Math/Matrix.h
   Innovator/Core/Scheme/Scheme.h
   Innovator/Core/Vulkan/Wrapper.h)
 
