--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project (Viewer)
 add_executable(Viewer main.cpp)
 
 set_target_properties(Viewer PROPERTIES CXX_STANDARD 17)
+add_definitions(-Wfatal-errors)
 
 IF(WIN32)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_WIN32_KHR")
@@ -12,8 +13,10 @@ ENDIF(WIN32)
 
 find_package(Vulkan REQUIRED)
 
-include_directories(${PROJECT_SOURCE_DIR}/../)
+include_directories(${PROJECT_SOURCE_DIR}/../glm)
+include_directories(${PROJECT_SOURCE_DIR}/../gli)
 include_directories(${PROJECT_SOURCE_DIR})
 include_directories(${Vulkan_INCLUDE_DIRS})
 
 target_link_libraries(Viewer Vulkan::Vulkan)
+
