compile options for swapchain, surface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,27 @@ cmake_minimum_required (VERSION 3.1)
 project (Viewer)
 add_executable(Viewer main.cpp)
 
+add_compile_definitions($<$<CONFIG:Debug>:DEBUG>)
+
+option(SURFACE "Enable Surface extensions" ON)
+if(SURFACE)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSURFACE")
+endif(SURFACE)
+
+option(SWAPCHAIN "Enable Swapchain extensions" ON)
+if(SWAPCHAIN)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSWAPCHAIN")
+endif(SWAPCHAIN)
+
 set_target_properties(Viewer PROPERTIES CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DGLM_FORCE_DEPTH_ZERO_TO_ONE")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DGLM_FORCE_LEFT_HANDED")
 
-IF(WIN32)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_WIN32_KHR")
-ELSE()
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_XCB_KHR")
-ENDIF(WIN32)
+if(WIN32)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_WIN32_KHR")
+else()
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_XCB_KHR")
+endif(WIN32)
 
 find_package(Vulkan REQUIRED)
 
