--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
-cmake_minimum_required (VERSION 3.12)
+cmake_minimum_required (VERSION 3.15)
+#cmake_policy(SET CMP0091 NEW)
 project (Viewer LANGUAGES CXX CUDA)
 
 find_package(Vulkan REQUIRED)
 find_package(CUDA 10.1 REQUIRED)
 
 add_executable(Viewer main.cpp)
+
+#set_property(TARGET Viewer PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+set_property(TARGET Viewer PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
 
 add_compile_definitions($<$<CONFIG:Debug>:DEBUG>)
 
@@ -31,4 +35,5 @@ include_directories(${Vulkan_INCLUDE_DIRS})
 include_directories(${CUDA_INCLUDE_DIRS})
 
 target_link_libraries(Viewer ${Vulkan_LIBRARIES})
+target_link_libraries(Viewer $ENV{VULKAN_SDK}/Lib/shaderc_shared.lib)
 target_link_libraries(Viewer ${CUDA_LIBRARIES})
